--- a/web/www/style.css
+++ b/web/www/style.css
@@ -1,37 +1,6 @@
-.post_row{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-}
-
-.post_col{
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-}
-
-.post{
-    margin-top: 8px;
-    vertical-align: middle;
-}
-
 img{
-    width: 10%;
-    height: auto;
-}
-
-@media screen and (max-width: 800px) {
-    .column {
-        flex: 50%;
-        max-width: 50%;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .column {
-        flex: 100%;
-        max-width: 100%;
-    }
+    max-width: 100%;
+    max-height: 100%;
 }
 
 h1{
