--- a/web/www/style.css
+++ b/web/www/style.css
@@ -4,5 +4,16 @@ img{
 }
 
 h1{
-    color: black;
+    text-align: center;
+    color: #eaeaea;
+    font-weight: lighter;
+}
+
+#interactive_area{
+    text-align: center;
+}
+
+body{
+    background-color: #0a0a0a;
+    font-family: 'Noto Sans', sans-serif;
 }
