--- a/web/www/style.css
+++ b/web/www/style.css
@@ -1,9 +1,17 @@
-img{
-    max-width: 100%;
-    max-height: 100%;
+body{
+    background-color: #0a0a0a;
+    font-family: 'Noto Sans', sans-serif;
+    overflow-x: hidden;
+}
+
+#header{
+    background: #0a0a0a;
+    z-index: 99;
+    padding-bottom:10px;
 }
 
 h1{
+    padding-top: 15px;
     text-align: center;
     color: #eaeaea;
     font-weight: lighter;
@@ -13,7 +21,31 @@ h1{
     text-align: center;
 }
 
-body{
-    background-color: #0a0a0a;
-    font-family: 'Noto Sans', sans-serif;
+#post{
+    position: relative;
 }
+
+.main_image{
+    position: relative;
+    z-index: 5;
+    left: 0px;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
+.blur_image {
+    position: absolute;
+    width: 150%;
+    height: auto;
+    left: -25%;
+    top: -25%;
+    z-index: -1;
+    -webkit-filter: blur(15px);
+    -moz-filter: blur(15px);
+    -o-filter: blur(15px);
+    -ms-filter: blur(15px);
+    filter: blur(15px);
+    opacity: 0.3;
+}
+
