Added modal code

--- a/web/www/style.css
+++ b/web/www/style.css
@@ -13,12 +13,33 @@ body{
 h1{
     padding-top: 15px;
     text-align: center;
-    color: #eaeaea;
+    color: #fafafa;
     font-weight: lighter;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 48px;
 }
 
 #interactive_area{
     text-align: center;
+}
+
+input{
+    background-color: #5a5a5a;
+    border: none;
+    line-height: 24px;
+    font-size: 24px;
+    text-align: center;
+    color: #fafafa;
+}
+
+#buttons{
+    padding-top: 10px;
+    padding-bottom: 15px;
+}
+
+#process_user_result{
+    color: #fafafa;
 }
 
 #post{
@@ -49,3 +70,28 @@ h1{
     opacity: 0.3;
 }
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 999; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    margin: auto; /* 15% from the top and centered */
+    width: 50%; /* Could be more or less, depending on screen size */
+    z-index: 999;
+}
+
+.modal-content img{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    opacity: 1.0;
+}
