--- a/web/www/style.css
+++ b/web/www/style.css
@@ -83,15 +83,14 @@ input{
 
 /* Modal Content/Box */
 .modal-content {
-    margin: auto; /* 15% from the top and centered */
-    width: 50%; /* Could be more or less, depending on screen size */
+    margin: auto;
+    width: 100%; 
+    height: 100%;
     z-index: 999;
 }
 
 .modal-content img{
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+    margin: auto;
     opacity: 1.0;
 }
