--- a/web/www/style.css
+++ b/web/www/style.css
@@ -94,14 +94,12 @@ button {
 }
 
 /* Modal Content/Box */
-.modal-content {
+.modal_content {
     margin: auto;
-    width: 100%; 
-    height: 100%;
     z-index: 999;
 }
 
-.modal-content img{
+.modal_content img{
     position: absolute;
     margin: auto;
     opacity: 1.0;
