--- a/web/www/style.css
+++ b/web/www/style.css
@@ -45,30 +45,25 @@ hr{
     border: none;
     line-height: 32px;
     font-size: 24px;
-    font-weight: normal;
     text-align: center;
     margin: auto;
     margin-top: 15px;
-    color: #fafafa;
     width: 400px;
     height: 32px;
 }
 
 #user_input{
-    background-color: #5a5a5a;
-    border: none;
     line-height: 30px;
-    font-size: 23px;
-    font-weight: normal;
-    text-align: center;
     margin: auto;
-    color: #fafafa;
     width: 350px;
     height: 32px;
+    color: #fafafa;
+    font-weight: lighter;
 }
 
 #at_symbol{
-    color: #cccccc;
+    color: #aaaaaa;
+    font-weight: normal;
     -webkit-user-select: none; /* Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
