--- a/web/www/style.css
+++ b/web/www/style.css
@@ -58,12 +58,12 @@ hr{
     width: 350px;
     height: 32px;
     color: #fafafa;
-    font-weight: lighter;
+    font-weight: 500;
 }
 
 #at_symbol{
     color: #aaaaaa;
-    font-weight: normal;
+    font-weight: 600;
     -webkit-user-select: none; /* Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
