--- a/web/www/style.css
+++ b/web/www/style.css
@@ -86,6 +86,7 @@ button {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    font-weight: 500;
 }
 
 #process_user_result, #end_results_target{
