--- a/web/www/style.css
+++ b/web/www/style.css
@@ -7,20 +7,20 @@ body{
 
 #header{
     margin-top: 0px;
-    padding-top: 15px;
+    padding-top: 1.5vh;
     background: #0a0a0a;
     z-index: 99;
-    padding-bottom:10px;
+    padding-bottom: 1vh;
 }
 
 h1{
-    padding-top: 15px;
+    padding-top: 1.5vh;
     text-align: center;
     color: #f7f7f7;
-    margin-top: 15px;
-    margin-bottom: 10px;
+    margin-top: 1.5vh;
+    margin-bottom: 1vh;
     font-weight: lighter;
-    font-size: 48px;
+    font-size: 4em;
 }
 
 hr{
@@ -43,21 +43,21 @@ hr{
 #input{
     background-color: #5a5a5a;
     border: 1px solid transparent;
-    line-height: 32px;
-    font-size: 24px;
+    line-height: 3.4vh;
+    font-size: 2.5vh;
     text-align: center;
     margin: auto;
-    margin-top: 15px;
-    margin-bottom: 5px;
-    width: 400px;
-    height: 32px;
+    margin-top: 2vh;
+    margin-bottom: 0.5vh;
+    width: 35vw;
+    height: 3.5vh;
 }
 
 #user_input{
-    line-height: 30px;
+    line-height: 3.4vh;
     margin: auto;
-    width: 350px;
-    height: 32px;
+    width: 3.4vw;
+    height: 3.5vh;
     color: #fafafa;
     font-weight: 500;
     outline: none;
@@ -73,20 +73,22 @@ hr{
 }
 
 #buttons{
-    padding-top: 10px;
-    padding-bottom: 15px;
+    padding-top: 0.8vh;
+    padding-bottom: 1.5vh;
 }
 
 button {
     background-color: #e7e7e7; /* Green */
     border: none;
     color: black;
-    padding: 5px 27px;
+    padding: 0.5vh 2.5vw;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1.8vh;
     font-weight: 500;
+    width: 12vw;
+    height: 3vh;
 }
 
 #process_user_result, #end_results_target{
@@ -95,9 +97,9 @@ button {
 }
 
 #target{
-    margin-left: 8px;
-    margin-right: 8px;
-    margin-bottom: 15px
+    margin-left: 3vw;
+    margin-right: 3vw;
+    margin-bottom: 1.5vh
 }
 
 #post{
@@ -160,7 +162,7 @@ button {
 
 #picture_data{
     font-weight: lighter;
-    font-size: 24px;
+    font-size: 1.9vh;
     color: #fafafa;
     opacity: 0.9;
 }
@@ -169,9 +171,9 @@ button {
     margin-bottom: 0px;
 }
 #picture_data h5{
-    font-size: 16px;
+    font-size: 1.3vh;
     font-weight: lighter;
-    margin-top: 5px;
+    margin-top: 0.5vh;
 }
 #picture_data a{
     color: inherit;
@@ -209,7 +211,8 @@ button {
 }
 
 #footer{
-    margin-right: 8px;
+    font-size: 1.6vh;
+    margin-right: 1vw;
     text-align: right;
     color: #999999;
 }
