--- a/web/www/style.css
+++ b/web/www/style.css
@@ -49,7 +49,7 @@ hr{
     margin: auto;
     margin-top: 2vh;
     margin-bottom: 0.5vh;
-    width: 35vw;
+    width: 40ch;
     height: 3.5vh;
 }
 
@@ -87,7 +87,7 @@ button {
     display: inline-block;
     font-size: 1.8vh;
     font-weight: 500;
-    width: 12vw;
+    width: 20ch;
     height: 3vh;
 }
 
