Add overflow to target div
Trying to fix the mobile rendering bug. pt4

--- a/web/www/style.css
+++ b/web/www/style.css
@@ -102,6 +102,8 @@ button {
     margin-right: 3vw;
     margin-bottom: 1.5vh
     width: 100vw;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #grid_invis{
