Disable doubletap zoom on mobile devices
Doubletap zoom messes with gallery formatting. Pinch zoom / panning
still work

--- a/web/www/style.css
+++ b/web/www/style.css
@@ -3,6 +3,7 @@ body{
     font-family: 'Noto Sans', sans-serif;
     overflow-x: hidden;
     margin: 0px;
+    touch-action: manipulation;
 }
 
 #page_console{
