Hide sign-in icon on page load

--- a/web/www/style.css
+++ b/web/www/style.css
@@ -6,6 +6,10 @@ body{
     touch-action: manipulation;
 }
 
+#sign_in{
+    display: none;
+}
+
 #page_console{
     position: fixed;
     float: left;
