Prevent user from adding a new line in input

--- a/web/www/style.css
+++ b/web/www/style.css
@@ -97,7 +97,7 @@ hr{
 #user_input{
     line-height: 1.6em;
     margin: auto;
-    width: 3.4vw;
+    width: 40ch;
     height: 1.8em;
     color: #fafafa;
     font-weight: 500;
