--- a/web/www/style.css
+++ b/web/www/style.css
@@ -27,6 +27,7 @@ body{
     filter: invert(100%);
     width: 100%;
     height: auto;
+    animation: shadow-pulse 1s infinite;
 }
 
 #page_console{
@@ -296,6 +297,17 @@ button {
     from { opacity: 0 }
     to { opacity: 1 }
 }
+
+@keyframes shadow-pulse
+{
+     0% {
+          box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.3);
+     }
+     100% {
+          box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+     }
+}
+
 
 #footer{
     font-size: 0.9em;
