--- a/web/www/style.css
+++ b/web/www/style.css
@@ -23,6 +23,13 @@ body{
     height: 100%;
 }
 
+#signed_in_message{
+    color: #f7f7f7;
+    font-weight: 100;
+    font-family: 'Raleway', sans-serif;
+    font-size: 2em !important;
+}
+
 #sign_in img{
     filter: invert(100%);
     width: 100%;
